yaml-applications/prod/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website
  name: website
  namespace: plannify-2
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: website
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - image: ghcr.io/plannify-truck-driver/website:0.1.3
          name: website
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "50m"
              memory: "128Mi"
          ports:
            - containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: ghcr-secret
