yaml-applications/prod/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: plannify-2
spec:
  type: ClusterIP
  selector:
    app: website
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
